# MoneyControl

./: .gitignore  README.MD  docker-compose.prod.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/: main.py  middleware.py
backend/src/database/: __init__.py  database.py  models.py
backend/src/middleware/: jwt_utils.py  middleware.py
backend/src/routes/: account.py  auth.py  models.py  redis.py  transaction.py  user.py
backend/src/security/: jwt_utils.py  pass_utils.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/finance-dashboard/: README.md
frontend/finance-dashboard/pages/: HomePage.js  LoginPage.js  TransactionsPage.js
frontend/finance-dashboard/public/: index.html
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: AddTransactionModal.js  BalanceCard.js  CategoryItem.js  ChartComponent.js  FooterNav.js  Header.js  InputField.js  TransactionItem.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: AnalyticsPage.js  DashboardLayout.js  RegisterPage.js  SettingsPage.js
frontend/src/services/: api.js
frontend/src/styles/: index.css
tests/: test_connection.py  test_db.py  test_security.py
